--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,5 @@ services:
     env_file:
       - .env
     environment:
-      - MONGODB_URI=${MONGODB_URI}
+      - MONGODB_URI
+      - JWT_SECRET
